gitops/apps/invidious/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invidious
  labels:
    app.kubernetes.io/instance: invidious
    app.kubernetes.io/name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: invidious
      app.kubernetes.io/name: server
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: invidious
        app.kubernetes.io/name: server
    spec:
      containers:
        - command: ['/bin/sh']
          args:
            - -c
            - |
              export INVIDIOUS_CONFIG=$(echo "$INVIDIOUS_CONFIG" | sed \
                -e "s/__dbname/$INVIDIOUS_DB_DBNAME/" \
                -e "s/__user/$INVIDIOUS_DB_USER/" \
                -e "s/__password/$INVIDIOUS_DB_PASSWORD/" \
                -e "s/__host/$INVIDIOUS_DB_HOST/" \
                -e "s/__hmac_key/$INVIDIOUS_HMAC_KEY/")
              exec /invidious/invidious
          image: quay.io/invidious/invidious:latest
          name: invidious
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
