gitops/apps/invidious/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: invidious
    app.kubernetes.io/name: server
  name: invidious-svc
spec:
  ports:
    - name: '3000'
      port: 3000
      targetPort: 3000
  selector:
    app.kubernetes.io/instance: invidious
    app.kubernetes.io/name: server
