gitops/apps/invidious/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: invidious
spec:
  parentRefs:
    - name: public
      namespace: istio-system
      sectionName: https
  hostnames:
    - yt.didactiklabs.io
  rules:
    - backendRefs:
        - name: invidious-svc
          port: 3000
